<resources>

    <string name="app_name">呀哈</string>
    <string name="app_name_en">YaHa</string>
    
    <!-- 通用 -->
    <string name="common_share">分享</string>
    
    <!-- Hints -->
    <string name="hint_login_faild">登录失败！</string>
    <string name="hint_login_success">登录成功！</string>
    <string name="hint_binary_stream">Get binary stream！</string>
    <string name="hint_weibo_auth_code_success">认证code成功</string>
    <string name="hint_weibo_auth_success">认证成功，有效期：</string>
    <string name="hint_weibo_auth_error">认证失败：</string>
    <string name="hint_weibo_auth_cancel">认证取消：</string>
    <string name="hint_weibo_auth_exception">认证Exception：</string>
    <string name="hint_activate">Activate!</string>
    <string name="hint_deactivate">DeActivate!</string>
    <string name="hint_error">错误：</string>
    <string name="hint_network_error">网络错误：</string>
    <string name="hint_check_network">请检查您的网络！</string>
    <string name="hint_logining">登录中&#8230;</string>
    <string name="hint_ret_error">操作失败：</string>
    <string name="hint_json_parse_faild">JSON解析失败！</string>
    <string name="hint_auth_invalid">授权信息无效！</string>
    <string name="hint_weibo_param_invalid">微博信息无效！</string>
    <string name="hint_photo_saved">照片已保存到：</string>
    <string name="hint_no_any_content_in_new_weibo">您还什么都没写呢！</string>
    <string name="hint_add_suggest_success">添加公共墙微博成功！</string>
    <string name="hint_add_suggest_faild">添加公共墙微博失败！</string>
    <string name="hint_add_weibo_success">添加微博成功！</string>
    <string name="hint_add_weibo_faild">添加微博失败！</string>
    <string name="hint_location_invalid">位置信息无效！</string>
    <string name="hint_loading_in_progress">加载中&#8230;</string>
    <string name="hint_error_and_reload">失败,点击重新加载</string>
    <string name="hint_no_more">没有更多了哦~</string>
    <string name="hint_read_weibo_error">读取微博错误</string>
    <string name="hint_pls_attach_photo">请添加个图片吧，亲 ^_^</string>
    <string name="hint_pls_select_poi">还没选择位置呢~</string>
    <string name="hint_word_cnt_exceed_limit">亲，不能超过140个字哦</string>
    <string name="hint_checkin_success">签到成功！</string>
    <string name="hint_poi_read_faild">Poi读取失败！</string>
    <string name="hint_add_comment_success">评论成功！</string>
    <string name="hint_loading_status">正在加载有趣信息&#8230;</string>
    <string name="hint_new_weibo_back">退出后无法保存，确定？</string>
    <string name="hint_loading_img_faild">图片加载失败！</string>
    <string name="hint_loading_img_not_finish">图片未加载完成</string>
    <string name="hint_logout_confirm">确认注销账户？</string>
    <string name="hint_check_find_case">输入正确的检索条件！</string>
    <string name="hint_auth_success">认证成功</string>
    <string name="hint_auth_faild">认证失败：</string>
    <string name="hint_init_faild">初始化错误！</string>
    <string name="hint_loc_invalid">定位中&#8230;</string>
    
    <!-- Buttons -->
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="button_weibo_login">新浪微博登录</string>
    <string name="button_refresh">刷新</string>
    <string name="button_nearby">周边美食</string>
    <string name="button_select_place">选择地点</string>
    <string name="button_detail">详情</string>
    <string name="button_comment">评论</string>
    <string name="button_share">分享</string>
    <string name="button_albums">打开手机相册</string>
    <string name="button_take_photo">拍照</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>
    <string name="button_logout">注销账号</string>
    <string name="button_my">我</string>
    
    <!-- Switches -->
    <string name="switch_2g_pic">2/3G下低清图</string>
    
    <!-- title -->
    <string name="title_new_weibo">签到</string>
    <string name="title_hot_place">热门地点</string>
    <string name="title_comment">评论</string>
    <string name="title_share">分享</string>
    <string name="title_select_operation">选择操作</string>
    <string name="title_full_image">查看图片</string>
    <string name="title_detail">详情</string>
    <string name="title_map">查看地图</string>
    <string name="title_about">关于</string>
    
    <!-- Text -->
    <string name="text_weibo_num">条微博</string>
    <string name="text_detail_weibo">微博正文</string>
    <string name="text_new_weibo">新微博</string>
    <string name="text_new_weibo_text_hint">说点什么。。。</string>
    <string name="text_get_location">获取位置</string>
    <string name="text_share_photo">分享图片</string>
    <string name="text_checkin_num">签到次数: %1$s</string>
    <string name="text_distance">距离: %1$s米</string>
    <string name="text_sending_hint">发送中&#8230;</string>
    <string name="text_send_faild_hint">发送失败，点击重试</string>
    <string name="text_i_m_here">我在这里:</string>
    <string name="text_m">米</string>
    <string name="text_comment_like_num">%1$s 赞  /  %2$s 评论</string>
    <string name="text_place_name">名字</string>
    <string name="text_place_address">地址</string>
    <string name="text_place_phone">电话</string>
    <string name="text_place_category">分类</string>
    <string name="text_place_url">网址</string>
    <string name="text_place_none">暂无</string>
    <string name="text_pic_url">图片地址:</string>
    <string name="text_share_from">来自:</string>
    <string name="text_unknown_place">未知位置</string>
    
    <!-- 微博提示 -->
    <string name="weibo_error_not_exist">原微博已删除！</string>
    <string name="weibo_error_request_freq_beyond_limit">微博繁忙，请稍后再试 ^_^</string>
    
    <!-- menu -->
    <string name="menu_search">搜索</string>
    <string name="menu_share">分享</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_query_all">全部</string>
    <string name="menu_query_item">部分</string>
    <string name="menu_checkin">签到</string>
    <string name="menu_send">发布</string>
    <string name="menu_save">保存</string>
    <string name="menu_map">地图</string>
    
    <!-- 其他 -->
    <string name="drawer_open">打开侧边栏</string>
    <string name="drawer_close">关闭侧边栏</string>
</resources>