<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/corner_textview_only_one"
	    android:layout_margin="10dp"
	    android:padding="5dp">
		
	    <LinearLayout 
	        style="@style/detail_poi_linear_layout">
	        
	        <ImageView 
	            android:id="@+id/img_place_img"
	            android:layout_width="70dp"
	            android:layout_height="70dp"
	            android:layout_marginRight="10dp"
	            android:scaleType="fitXY"
	            android:src="@drawable/empty_photo"
	            />
	            
	        <TextView 
	            android:id="@+id/text_place_name"
	            android:layout_gravity="center_vertical"
	            style="@style/detail_poi_text_value"
	            />
	    </LinearLayout>
		    
	    <LinearLayout 
            style="@style/detail_poi_linear_layout">
	        
	        <TextView 
	            android:text="@string/text_place_address"
	            style="@style/detail_poi_text_key"/>
	        
	        <TextView 
	            android:id="@+id/text_place_address"
	            style="@style/detail_poi_text_value"/>
	    </LinearLayout>
	    
	    <LinearLayout 
            style="@style/detail_poi_linear_layout">
	        
	        <TextView 
	            android:text="@string/text_place_phone"
	            style="@style/detail_poi_text_key"/>
	        
	        <TextView 
	            android:id="@+id/text_place_phone"
	            style="@style/detail_poi_text_value"/>
	    </LinearLayout>
	    
	    <LinearLayout 
            style="@style/detail_poi_linear_layout">
	        
	        <TextView 
	            android:text="@string/text_place_category"
	            style="@style/detail_poi_text_key"/>
	        
	        <TextView 
	            android:id="@+id/text_place_category"
	            style="@style/detail_poi_text_value"/>
	    </LinearLayout>
	    
	    <LinearLayout 
            style="@style/detail_poi_linear_layout">
            
            <TextView 
                android:text="@string/text_place_url"
                style="@style/detail_poi_text_key"/>
            
            <TextView 
                android:id="@+id/text_place_url"
                style="@style/detail_poi_text_value"/>
        </LinearLayout>
	</LinearLayout>
</ScrollView>